# calc

./: CMakeLists.txt  ads.cpp  calc.cpp  calc.hpp  main.cpp  rect.cpp  rect.hpp
